@@ -1,10 +1,4 @@
-dass die location in der exceptionmessage dranhängt ist ein hack
--> gesondertes feld
--> printSex escape=nil sollte nur message liefern, printSex escape=true sollte alles wie gehabt aneinanderhängen
-   -> LambdaJError sollte Writeable implementieren
-
-
-vector (oder nur das was make-array ohne typ ausspuckt? oder sollte make-array "dynamic" als typ akzeptieren?) koennte intelligenter sein:
+vector (oder nur das was make-array ohne typ ausspuckt?) oder sollte make-array "dynamic" als typ akzeptieren?) koennte intelligenter sein:
 derzeit ists ein Object[] bzw. ArrayList<Object>
 -> denkbar waere, dass beim anlegen nix allokiert wird, und wenn z.B. als erstes element ein double daherkommt wird ein double[] allokiert,
    wenn in weiterer folge ein "nicht passendes" objekt reingesteckt werden soll, müsste in ein Object[] umkopiert werden.
